styles/css/app.css
/* ... */
.nav-btn .strokes .stroke:last-child {
  transform: translateY(3.75px) translateZ(0);
}

.nav-btn.toggled .strokes .stroke {
  transform: rotate(45deg) translateZ(0);
}
.nav-btn.toggled .strokes .stroke:last-child {
  transform: rotate(-45deg) translateZ(0);
}

.nav-menu {
  z-index: 0;
  position: absolute;
  height: 0;
  width: 100%;
  top: 0;
  left: 0;
  background-color: #101010;
  overflow: hidden;
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.nav-menu-container {
  position: relative;
  top: 25vh;
  display: flex;
  flex-direction: column;
}

.nav-menu-page-links {
  display: flex;
  flex-direction: column;
  text-align: right;
  overflow: hidden;
  margin-bottom: 2.5rem;
}

.nav-menu-page-link.slide-in-one {
  animation-name: slide-left;
  animation-duration: 0.6s;
}
.nav-menu-page-link.slide-in-two {
  animation-name: slide-left;
  animation-duration: 0.8s;
}

.nav-menu-page-link a {
  text-decoration: none;
  font-family: "Montserrat", sans-serif;
  font-size: calc(25px + 4vw);
  font-weight: 800;
  text-transform: uppercase;
  color: #ffffff;
}
.nav-menu-page-link a.--contact {
  text-decoration: line-through;
  text-decoration-color: #f65252;
  text-decoration-thickness: 0.5rem;
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .nav-menu-page-link a.--contact {
    text-decoration-thickness: 1rem;
  }
}

.nav-menu-info {
  width: 100%;
}

.nav-menu-info-wrapper {
  font-family: "Blinker", sans-serif;
  display: inline-block;
  overflow: hidden;
}
.nav-menu-info-wrapper a {
  display: block;
  line-height: 1.5rem;
}
.nav-menu-info-wrapper a.slide-in-one {
  animation-name: slide-right;
  animation-duration: 0.6s;
}
.nav-menu-info-wrapper a.slide-in-two {
  animation-name: slide-right;
  animation-duration: 0.8s;
}

.nav-menu-footer {
  display: flex;
  position: absolute;
  bottom: 2rem;
  left: 0;
  right: 0;
  overflow: hidden;
}
.nav-menu-footer .nav-menu-social-links {
  flex: 1;
}
.nav-menu-footer .nav-menu-social-links a {
  margin-right: 0.5rem;
}
.nav-menu-footer .nav-menu-social-links a svg {
  fill: #ffffff;
}
.nav-menu-footer .nav-menu-social-links a svg.transition-in {
  animation-name: slide-up;
  animation-duration: 0.6s;
}
.nav-menu-footer span {
  text-transform: uppercase;
  font-family: "Blinker", sans-serif;
  font-size: 0.812rem;
  font-weight: 700;
  letter-spacing: 2px;
  color: #8c8c8c;
  text-align: right;
}
.nav-menu-footer span.transition-in {
  animation-name: slide-up;
  animation-duration: 0.6s;
}

#scrollbar-wrapper {
  position: fixed;
  top: 0;
  z-index: 50;
  right: 0;
  width: 6px;
  left: auto;
  bottom: 0;
  background-color: #ffffff;
}

.scrollbar {
  position: absolute;
  display: block;
  height: 100%;
  background-color: #101010;
  right: 0;
  width: 6px;
  left: auto;
  bottom: 0;
  -webkit-transform: translateY(-100vh);
  -ms-transform: translateY(-100vh);
  transform: translateY(-100vh);
}

@keyframes slide-left {
  from {
    transform: translateX(55%);
  }
  to {
    transform: translateX(0);
  }
}
@keyframes slide-right {
  from {
    transform: translateX(-55%);
  }
  to {
    transform: translateX(0);
  }
}
@keyframes slide-up {
  from {
    transform: translateY(100%);
  }
  to {
    transform: translateY(0);
  }
}
.hero {
  height: calc(100vh - 5rem);
}

.hero-arrow-container {
  text-align: center;
  position: absolute;
  left: 0;
  right: 0;
  top: 80vh;
}

.hero-arrow {
  font-size: 58px;
}
.hero-arrow svg {
  fill: #101010;
  stroke: #8c8c8c;
  stroke-width: 1px;
}

.section-wrapper {
  padding: 3rem 0;
}

.section-header {
  margin-bottom: 2rem;
  font-size: calc(20px + 2.1vw);
}

.section-text {
  margin: 0 2rem;
  font-size: calc(12px + 1vw);
  line-height: 1.7;
}
@media (min-width: 361px) and (max-width: 414px) {
  .section-text {
    margin: 0 2rem;
  }
}

.d-none {
  display: none;
}

.d-flex {
  display: flex;
}

.d-block {
  display: block;
}

@media (min-width: 360px) and (max-width: 414px) {
  .d-sm-none {
    display: none;
  }

  .d-sm-flex {
    display: flex;
  }

  .d-sm-block {
    display: block;
  }
}
@media (min-width: 768px) and (max-width: 1280px) {
  .d-sm-none {
    display: none;
  }

  .d-sm-flex {
    display: flex;
  }

  .d-sm-block {
    display: block;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .d-lg-none {
    display: none;
  }

  .d-lg-flex {
    display: flex;
  }

  .d-lg-block {
    display: block;
  }
}
.carousel {
  position: relative;
  z-index: 1;
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel {
    display: flex;
  }
}

.carousel-btn-container {
  justify-content: center;
  display: flex;
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-btn-container {
    justify-content: center;
    flex-direction: column;
  }
}

.carousel-btn {
  font-family: "Montserrat", sans-serif;
  text-decoration: none;
  font-size: 35px;
  font-weight: 800;
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-btn {
    font-size: 58px;
  }
  .carousel-btn svg {
    fill: #101010;
    stroke: #8c8c8c;
    stroke-width: 1px;
  }
}

.carousel-prev {
  margin-left: 0rem;
}
@media (min-width: 768px) and (max-width: 1920px) {
  .carousel-prev {
    margin-left: 2rem;
  }
}

.carousel-next {
  margin-right: 0rem;
}
@media (min-width: 768px) and (max-width: 1920px) {
  .carousel-next {
    margin-right: 2rem;
  }
}

@supports (-webkit-text-stroke: 1px #8c8c8c) {
  .carousel-btn {
    -webkit-text-stroke: 1px #8c8c8c;
    -webkit-text-fill-color: #101010;
  }
}
.carousel-projects {
  margin: 1rem auto;
}
@media (min-width: 360px) and (max-width: 374px) {
  .carousel-projects {
    margin: 0.5rem auto;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-projects {
    width: 70%;
    margin: 1rem auto;
  }
}

.carousel-cell {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 68vh;
  position: relative;
}
/* ... */

